first hw04 commit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <!-- Navigation menu -->
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Portfolio</a>
@@ -71,6 +71,11 @@
           <h2 class="visually-hidden">Webstudio Features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="f-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -78,6 +83,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="f-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -85,6 +95,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="f-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -92,6 +107,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="f-icon-container">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-name">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -117,6 +137,42 @@
               <div class="team-item-label">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="team-soc">
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -130,6 +186,42 @@
               <div class="team-item-label">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="team-soc">
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -143,6 +235,42 @@
               <div class="team-item-label">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="team-soc">
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -156,6 +284,42 @@
               <div class="team-item-label">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="team-soc">
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="soc-item">
+                    <a href="">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -167,13 +331,20 @@
           <h2 class="portfolio-header">Our Portfolio</h2>
           <ul class="potfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/banking.jpg"
-                alt="Banking App picture"
-                width="360"
-                height="300"
-              >
+              <div class="portfolio-item-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/banking.jpg"
+                  alt="Banking App picture"
+                  width="360"
+                  height="300"
+                >
+                <p class="portfolio-image-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -252,13 +423,48 @@
     <footer class="footer">
       <div class="container container-footer">
         <!-- Logo -->
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-tail">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-right">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-tail">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="footer-soc-title">Social media</p>
+          <ul class="footer-soc">
+            <li class="soc-item">
+              <a href="">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-item">
+              <a href="">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-item">
+              <a href="">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="soc-item">
+              <a href="">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
