--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GoIT-Homework</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    >
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
       integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    >
-    <link rel="stylesheet" href="./css/styles.css" >
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="page-header">
@@ -73,7 +73,7 @@
             <li class="features-item">
               <div class="f-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-name">Strategy</h3>
@@ -85,7 +85,7 @@
             <li class="features-item">
               <div class="f-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-name">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="features-item">
               <div class="f-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-name">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="features-item">
               <div class="f-icon-container">
                 <svg class="features-icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-name">Technologies</h3>
@@ -133,7 +133,7 @@
                 alt="Mark Guerrero photo"
                 width="264"
                 height="260"
-              >
+              />
               <div class="team-item-label">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -141,34 +141,28 @@
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -182,7 +176,7 @@
                 alt="Tom Ford photo"
                 width="264"
                 height="260"
-              >
+              />
               <div class="team-item-label">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -190,34 +184,28 @@
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,7 +219,7 @@
                 alt="Camila Garcia photo"
                 width="264"
                 height="260"
-              >
+              />
               <div class="team-item-label">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -239,34 +227,28 @@
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -280,7 +262,7 @@
                 alt="Daniel Wilson photo"
                 width="264"
                 height="260"
-              >
+              />
               <div class="team-item-label">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
@@ -288,34 +270,28 @@
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
                     <a href="">
                       <svg class="soc-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -338,7 +314,7 @@
                   alt="Banking App picture"
                   width="360"
                   height="300"
-                >
+                />
                 <p class="portfolio-image-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -357,7 +333,7 @@
                 alt="Cashless Payment picture"
                 width="360"
                 height="300"
-              >
+              />
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -370,7 +346,7 @@
                 alt="Meditaion App picture"
                 width="360"
                 height="300"
-              >
+              />
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-text">App</p>
@@ -383,7 +359,7 @@
                 alt="Taxi Service. Driver picture"
                 width="360"
                 height="300"
-              >
+              />
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -396,7 +372,7 @@
                 alt="Screen Illustrations example"
                 width="360"
                 height="300"
-              >
+              />
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
@@ -409,7 +385,7 @@
                 alt="Happy women with smartphone"
                 width="360"
                 height="300"
-              >
+              />
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -438,28 +414,28 @@
             <li class="soc-item">
               <a href="">
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-item">
               <a href="">
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-item">
               <a href="">
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-item">
               <a href="">
                 <svg class="soc-icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
