--- a/index.html
+++ b/index.html
@@ -139,28 +139,28 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="team-soc">
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -182,28 +182,28 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="team-soc">
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -225,28 +225,28 @@
                 <p class="team-text">Marketing</p>
                 <ul class="team-soc">
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -268,28 +268,28 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="team-soc">
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="soc-item">
-                    <a href="">
+                    <a class="soc-link" href="">
                       <svg class="soc-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -412,28 +412,28 @@
           <p class="footer-soc-title">Social media</p>
           <ul class="footer-soc">
             <li class="soc-item">
-              <a href="">
+              <a class="soc-link" href="">
                 <svg class="soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-item">
-              <a href="">
+              <a class="soc-link" href="">
                 <svg class="soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-item">
-              <a href="">
+              <a class="soc-link" href="">
                 <svg class="soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-item">
-              <a href="">
+              <a class="soc-link" href="">
                 <svg class="soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
