--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>GoIT-Homework</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
       integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css" >
   </head>
   <body>
     <header class="page-header">
@@ -133,7 +133,7 @@
                 alt="Mark Guerrero photo"
                 width="264"
                 height="260"
-              />
+              >
               <div class="team-item-label">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -176,7 +176,7 @@
                 alt="Tom Ford photo"
                 width="264"
                 height="260"
-              />
+              >
               <div class="team-item-label">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -219,7 +219,7 @@
                 alt="Camila Garcia photo"
                 width="264"
                 height="260"
-              />
+              >
               <div class="team-item-label">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -262,7 +262,7 @@
                 alt="Daniel Wilson photo"
                 width="264"
                 height="260"
-              />
+              >
               <div class="team-item-label">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
@@ -314,7 +314,7 @@
                   alt="Banking App picture"
                   width="360"
                   height="300"
-                />
+                >
                 <p class="portfolio-image-cover">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -327,65 +327,100 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/cashless.jpg"
-                alt="Cashless Payment picture"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/cashless.jpg"
+                  alt="Cashless Payment picture"
+                  width="360"
+                  height="300"
+                >
+                <p class="portfolio-image-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/meditaion.jpg"
-                alt="Meditaion App picture"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/meditaion.jpg"
+                  alt="Meditaion App picture"
+                  width="360"
+                  height="300"
+                >
+                <p class="portfolio-image-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/taxi.jpg"
-                alt="Taxi Service. Driver picture"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/taxi.jpg"
+                  alt="Taxi Service. Driver picture"
+                  width="360"
+                  height="300"
+                >
+                <p class="portfolio-image-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/screen.jpg"
-                alt="Screen Illustrations example"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/screen.jpg"
+                  alt="Screen Illustrations example"
+                  width="360"
+                  height="300"
+                >
+                <p class="portfolio-image-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/courses.jpg"
-                alt="Happy women with smartphone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-item-overlay">
+                <img
+                  class="portfolio-image"
+                  src="./images/courses.jpg"
+                  alt="Happy women with smartphone"
+                  width="360"
+                  height="300"
+                >
+                <p class="portfolio-image-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-item-label">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -399,7 +434,7 @@
     <footer class="footer">
       <div class="container container-footer">
         <!-- Logo -->
-        <div class="footer-right">
+        <div class="footer-right-part">
           <a class="logo footer-logo" href="./index.html"
             >Web<span class="logo-tail">Studio</span></a
           >
