--- a/index.html
+++ b/index.html
@@ -446,30 +446,30 @@
         <div class="social-media">
           <p class="footer-soc-title">Social media</p>
           <ul class="footer-soc">
-            <li class="soc-item">
-              <a class="soc-link" href="">
-                <svg class="soc-icon" width="24" height="24">
+            <li class="f-soc-item">
+              <a class="f-soc-link" href="">
+                <svg class="f-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="soc-item">
-              <a class="soc-link" href="">
-                <svg class="soc-icon" width="24" height="24">
+            <li class="f-soc-item">
+              <a class="f-soc-link" href="">
+                <svg class="f-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="soc-item">
-              <a class="soc-link" href="">
-                <svg class="soc-icon" width="24" height="24">
+            <li class="f-soc-item">
+              <a class="f-soc-link" href="">
+                <svg class="f-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="soc-item">
-              <a class="soc-link" href="">
-                <svg class="soc-icon" width="24" height="24">
+            <li class="f-soc-item">
+              <a class="f-soc-link" href="">
+                <svg class="f-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
